--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.2",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.14.39",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
-    "postcss-nesting": "^10.1.7"
+    "postcss-nesting": "^10.1.7",
+    "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
